Fix must see tag position and style on mobile.

--- a/scss/partials/_cmail.scss
+++ b/scss/partials/_cmail.scss
@@ -407,7 +407,8 @@ div.cmail-outer {
 
       @include tablet() {
         width: 100%;
-        height: 56px;
+        min-height: 56px;
+        height: auto;
         border-top-left-radius: 0;
         border-top-right-radius: 0;
         padding: 12px 14px;
@@ -422,10 +423,23 @@ div.cmail-outer {
 
         @include tablet() {
           width: 100%;
+          min-height: 32px;
+          height: auto;
+          float: unset;
         }
 
         &.must-see-on {
           width: 304px;
+
+          @include tablet() {
+            width: 100%;
+
+            div.must-see-tag {
+              margin-left: 0;
+              margin-top: 16px;
+              background-color: rgba($sea_blue, 0.2) !important;
+            }
+          }
         }
 
         div.board-name {
